correction alignement vertical

--- a/quizz/quizzSP.css
+++ b/quizz/quizzSP.css
@@ -209,7 +209,7 @@ footer {
 
   #btnQuizz {
     font-size: 28pt;
-    margin-top: 10px;
+    margin-top: 20px;
     padding-top: 10px;
   }
 
